@@ -1,5 +1,7 @@
 Change log next version
 -----------------------
+* Fixed a bug in Whitebox which prevented passing null parameters to methods.
+
 
 Change log 1.4.7 (2010-12-27)
 -----------------------------
